--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "web322-app",
   "version": "1.0.0",
+  "builds": [
+    {
+      "src": "package.json", 
+      "use": "vercel-sapper"
+    }
+  ],
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -12,4 +18,7 @@
   "dependencies": {
     "express": "^4.21.1"
   }
-}
+  
+  
+  }
+
